GNOME Bugzilla – Bug 668502
"No topic defined" displayed when reconnecting a private chat
Last modified: 2012-01-24 12:24:37 UTC
- Start a chat with a contact - Disconnect and then reconnect your network - The chat window displays "No topic defined" We don't care about this message, private chats can't have a topic anyway.
Created attachment 205885 [details] [review] don't display 'No topic defined' in private chats
Review of attachment 205885 [details] [review]: ++
(In reply to comment #0) > We don't care about this message, private chats can't have a topic anyway. Arguably they can, Google Talk does this when you reply to someone's email via chat.
(In reply to comment #3) > (In reply to comment #0) > > > We don't care about this message, private chats can't have a topic anyway. > > Arguably they can, Google Talk does this when you reply to someone's email via > chat. Ok, what about this patch then.
Created attachment 205956 [details] [review] don't display 'No topic defined' if topic are not supported
Review of attachment 205956 [details] [review]: ++
Bug 668502 - "No topic defined" displayed when reconnecting a private chat - NEW Attachment 205956 [details] pushed as 6de7927 - don't display 'No topic defined' if topic are not supported