don't display 'No topic defined' if topic are not supported

https://bugzilla.gnome.org/show_bug.cgi?id=668502